Added explanation about how to run the program